--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:textSize="50sp"
             android:textColor="@color/white"
             android:singleLine="true"
+            android:maxLines="1"
             android:background="@null"
             android:paddingRight="5dp"
             android:paddingBottom="10dp"
@@ -41,22 +42,33 @@
                 android:id="@+id/ac_btn"
                 android:text="AC"
                 android:background="#555555"
-                style="@style/Button_style" />
+                android:layout_weight="2"
+                android:layout_margin="3dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                />
             <ImageButton
                 android:id="@+id/delete_btn"
                 android:src="@drawable/calculator_del"
                 android:background="#555555"
-                style="@style/Button_style" />
-            <Button
-                android:id="@+id/procent_btn"
-                android:text="%"
-                android:background="#555555"
-                style="@style/Button_style" />
+                android:textColor="@color/white"
+                android:layout_weight="3"
+                android:textSize="20sp"
+                android:layout_margin="3dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
             <Button
                 android:id="@+id/deleniye_btn"
                 android:text="/"
                 android:background="#FF9800"
-                style="@style/Button_style" />
+                android:layout_weight="3"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_margin="3dp"
+                android:textColor="@color/white"
+                android:textSize="20sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_weight="1"
